--- a/templates/schema.sql.j2
+++ b/templates/schema.sql.j2
@@ -17,6 +17,12 @@ CREATE TABLE IF NOT EXISTS `alias`
   CONSTRAINT `pk` PRIMARY KEY (`alias`,`mail`)
 );
 
+CREATE TABLE IF NOT EXISTS `transport`
+(
+  `domain` VARCHAR(255) PRIMARY KEY,
+  `transport` VARCHAR(255)
+);
+
 CREATE TABLE IF NOT EXISTS `account`
 (
   `mail` VARCHAR(255) PRIMARY KEY,
